--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.10"
+fastapi = "^0.82.0"
+SQLAlchemy = "^1.4.40"
+mysqlclient = "^2.1.1"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
