--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,10 @@ python = "^3.10"
 fastapi = "^0.82.0"
 SQLAlchemy = "^1.4.40"
 mysqlclient = "^2.1.1"
+PyJWT = "^2.5.0"
+bcrypt = "^4.0.1"
+pytest-asyncio = "^0.19.0"
+httpx = "^0.23.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.6.0"
