--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,52 +1,24 @@
 [tool.poetry]
-name = "pyproject"
+name = "myfolio"
 version = "0.1.0"
 description = ""
-authors = ["JoMingyu"]
-packages = [
-    { include = "app" }
-]
+authors = ["sun9zzang <sun9nyy@gmail.com>"]
+readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-fastapi = "^0.82.0"
-SQLAlchemy = "^1.4.40"
-mysqlclient = "^2.1.1"
-PyJWT = "^2.5.0"
+fastapi = "^0.85.1"
+sqlalchemy = "^1.4.42"
+pyjwt = "^2.6.0"
 bcrypt = "^4.0.1"
+pytest = "^7.1.3"
+awscli = "^1.25.95"
+boto3 = "^1.24.94"
 pytest-asyncio = "^0.19.0"
-httpx = "^0.23.0"
+pymysql = "^1.0.2"
+uvicorn = "^0.19.0"
 
-[tool.poetry.dev-dependencies]
-black = "^22.6.0"
-autoflake = "^1.5.2"
-isort = "^5.10.1"
-pre-commit = "^2.20.0"
-pytest = "^7.1.2"
-mypy = "^0.971"
-pytest-cov = "^3.0.0"
-flake8 = "^5.0.4"
-pylint = "^2.15.0"
-
-[tool.isort]
-profile = "black"
-
-[tool.pytest.ini_options]
-testpaths = "tests"
-filterwarnings = "error"
-addopts = '''
-  --strict-markers
-  --tb=short
-  --cov=app
-  --cov=tests
-  --cov-branch
-  --cov-report=term-missing
-  --cov-report=html
-  --cov-report=xml
-  --no-cov-on-fail
-  --cov-fail-under=100
-'''
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
