--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,9 @@ sqlalchemy = "^1.4.42"
 pyjwt = "^2.6.0"
 bcrypt = "^4.0.1"
 pytest = "^7.1.3"
-awscli = "^1.25.95"
-boto3 = "^1.24.94"
-pytest-asyncio = "^0.19.0"
 pymysql = "^1.0.2"
-uvicorn = "^0.19.0"
 mangum = "^0.16.0"
+orjson = "^3.8.1"
 
 
 [build-system]
