WIP: API - auth, users

--- a/deployment/aws/Pulumi.yaml
+++ b/deployment/aws/Pulumi.yaml
@@ -1,5 +1,5 @@
-name: myfolio-lambda-deployment
-description: A minimal AWS Python Pulumi program
+name: myfolio-handler-deployment
+description: deployment automation for myfolio-handler in AWS Lambda
 runtime:
     name: python
     options:
