WIP: error handling

--- a/.gitignore
+++ b/.gitignore
@@ -339,3 +339,7 @@ $RECYCLE.BIN/
 
 asdf.py
 deployment/myfolio-handler-packages.zip
+
+.idea/Myfolio.iml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
