--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,14 +8,15 @@ repos:
       - id: isort
         stages: [commit]
         args: [ "--diff", "--profile", "black" ]
+        language_version: python3.9
   - repo: https://github.com/ambv/black
-    rev: 22.6.0
+    rev: 22.12.0
     hooks:
       - id: black
         stages: [commit]
         args: [ "--check" ]
   - repo: https://github.com/PyCQA/flake8
-    rev: 5.0.4
+    rev: 6.0.0
     hooks:
       - id: flake8
         stages: [commit]
