--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,20 @@ pytest = "^7.1.3"
 pymysql = "^1.0.2"
 mangum = "^0.16.0"
 orjson = "^3.8.1"
+pre-commit = "^2.20.0"
+flake8 = "^6.0.0"
+black = "^22.12.0"
+isort = "^5.10.1"
 
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+
+[tool.black]
+line-length = 88
 
 [build-system]
 requires = ["poetry-core"]
