--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pre-commit = "^2.20.0"
 flake8 = "^6.0.0"
 black = "^22.12.0"
 isort = "^5.10.1"
+boto3 = "^1.26.41"
 
 [tool.isort]
 profile = "black"
